java 1.5, Integer.valueOf
git-svn-id: https://scm.mmbase.org/mmbase/trunk@32531 91430c5f-d668-0410-9e7d-dd663366dcfd